# isde-translator

./: .gitignore  DOCUMENTATION.md  README.md  allclasses-frame.html  allclasses-noframe.html  conftest.py  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini  translate.py  xmlFetcher.py
.github/workflows/: build.yml  python-package.yml
dataset/: __init__.py  _xpathqueries.py  boundingbox.py
docs/: allclasses-index.html  allpackages-index.html  dataset.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.js  type-search-index.js
docs/dataset/: BoundingBox.html  xpathqueries.html
docs/ie/isde/: App.html  (+6 more)
html/isde/: Namespaces.html  index.html
ie/: __init__.py
ie/isde/: ComplexTypes.py  IANAMimeTypes.py  ISDEDatasetMetadata.py  ISDEDatasetParser.py  ISDERDFNamespaces.py  JSONLDFraming.py  Licenses.py  Namespaces.py  RDFNamespaces.py  XMLQueries.py  __init__.py
isdetranslator/: __init__.py
src/isde_dataset/: __init__.py  _xpathqueries.py  boundingbox.py
test/: test_bounding_box_basic.py  test_dataset_basic.py  test_epa_ireland_dataset.py  test_erddap_irish_weather_buoy_dataset.py  test_geological_survey_ireland_dataset.py  test_marine_institute_dataset.py  test_noaa_ioos_dataset.py  test_npws_ireland_dataset.py
tests/: test_dataset.py
(+98 files in other folders)
