[metadata]
name=isde_dataset
description=A Python package for translating dataset metadata between different serialisations, originally developed for the Irish Spatial Data Exchange

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude=test

[tool:pytest]
flake8-ignore =
    test/*.py ALL
    conftest.py ALL
flake8-max-complexity = 10